--- a/static-src/common/layout.sass
+++ b/static-src/common/layout.sass
@@ -13,3 +13,8 @@
         display: block
         margin: auto
         text-align: center
+
+    .centered
+        text-align: center
+        img
+            width: 40%
