--- a/static-src/common/layout.sass
+++ b/static-src/common/layout.sass
@@ -9,6 +9,11 @@
     .text
         padding: 1em 20%
 
+        img
+            display: block
+            margin: auto
+            max-width: 100%
+
     .figure
         display: block
         margin: auto
