--- a/static-src/blog/blog.css
+++ b/static-src/blog/blog.css
@@ -12,10 +12,12 @@
 .blog-post {
     margin-bottom: 30px;
 }
+
 .blog-post-header .options {
     display: inline-block;
     float: right;
 }
+
 .blog-post-title {
     display: block;
     margin: auto;
@@ -23,10 +25,12 @@
     margin-bottom: 0;
     font-weight: normal;
 }
+
 .blog-post-title:hover,
 .blog-post-title:active {
   text-decoration: none;
 }
+
 .blog-post-meta {
     display: block;
     margin: auto;
@@ -34,10 +38,12 @@
     color: #999;
     margin-bottom: 8px;
 }
+
 .blog-post-content {
     padding-top: 10px;
     padding-left: 10px;
 }
+
 /* Nav button */
 .blog-btn {
     margin-bottom: 30px;
@@ -48,22 +54,28 @@
 .blog-btn-dropdown:focus {
     color: white;
 }
+
 .blog-btn-dropdown.collapsed {
     background-color: white;
     color: #495057;
 }
+
 .blog-collapse {
     width: 90%;
     margin-top: 3px;
 }
+
 .blog-btn-category {
+    border-color: rgb(0,0,0);
     border-color: rgba(0,0,0,.15);
     background-color: white;
     color: #495057;
 }
+
 .blog-btn-category.focus {
-  box-shadow: none !important;
+  box-shadow: none;
 }
+
 .blog-btn-category:hover {
     background-color: white;
     color: #495057;
@@ -76,16 +88,19 @@
     padding-bottom: 10px;
     text-align: center;
 }
+
 .blog-sidebar-module {
     text-align: center;
     margin-bottom: 30px;
 }
+
 .blog-sidebar-btn {
     padding-top: 5px;
     padding-bottom: 5px;
     margin-top: 10px;
     width: 80%;
 }
+
 .blog-sidebar-category {
     border-radius: 0;
     border-width: 3px;
